--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "declaration": true,
-    "module": "commonjs",
+    "module": "CommonJS",
     "target": "ES2019",
     "incremental": true,
     "removeComments": false,
