--- a/package.json
+++ b/package.json
@@ -13,19 +13,27 @@
     "integration-test": "NODE_ENV=dev jest --testRegex /test/.*\\.integration.ts$",
     "unit-test": "NODE_ENV=dev jest --testRegex /test/.*\\.test.ts$ ",
     "test": "yarn unit-test && yarn integration-test",
-    "lint": "eslint . --ext .ts --fix"
+    "lint": "eslint . --ext .ts --fix",
+    "api": "yarn tsc && api-extractor run;api-documenter yaml -i tmp/api -o tmp/api-yaml;api-documenter-yaml-to-antora-asciidoc asciidoc -i tmp/api-yaml"
   },
   "dependencies": {
+    "@microsoft/api-documenter": "^7.19.9",
+    "@microsoft/api-extractor": "^7.29.5",
+    "api-documenter-yaml-to-antora-asciidoc": "^0.0.0-11",
     "stack-trace": "^1.0.0-pre1",
     "winston": "^3.3.3"
   },
   "devDependencies": {
+    "140-opts": "",
+    "@microsoft/api-documenter": "^7.19.9",
+    "@microsoft/api-extractor": "^7.29.5",
     "@types/jest": "^26.0.14",
     "@types/node": "^14.11.10",
+    "@types/stack-trace": "^0.0.30",
+    "api-documenter-yaml-to-antora-asciidoc": "^0.0.0-11",
     "jest": "^26.5.3",
     "ts-jest": "^26.4.1",
     "ts-node": "^9.0.0",
-    "tsc": "^1.20150623.0",
     "tslint": "^5.16.0",
     "tslint-eslint-rules": "^5.4.0",
     "typescript": "^4.2.4",
