--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@eventicle/eventicle-utilities",
-  "version": "0.0.16",
+  "version": "0.0.17",
   "description": "Useful utilities",
   "repository": "git@github.com:eventicle/eventicle-utilities.git",
   "author": "Eventicle Team",
@@ -17,27 +17,25 @@
     "api": "yarn tsc && api-extractor run;api-documenter yaml -i tmp/api -o tmp/api-yaml;api-documenter-yaml-to-antora-asciidoc asciidoc -i tmp/api-yaml"
   },
   "dependencies": {
-    "@microsoft/api-documenter": "^7.19.9",
-    "@microsoft/api-extractor": "^7.29.5",
-    "api-documenter-yaml-to-antora-asciidoc": "^0.0.0-11",
+    "safe-stringify": "^1.1.1",
     "stack-trace": "^1.0.0-pre1",
     "winston": "^3.3.3"
   },
   "devDependencies": {
-    "140-opts": "",
-    "@microsoft/api-documenter": "^7.19.9",
-    "@microsoft/api-extractor": "^7.29.5",
-    "@types/jest": "^26.0.14",
-    "@types/node": "^14.11.10",
-    "@types/stack-trace": "^0.0.30",
+    "@microsoft/api-documenter": "^7.26.27",
+    "@microsoft/api-extractor": "^7.52.8",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.15.19",
+    "@types/stack-trace": "^0.0.33",
+    "140-opts": "^1.3.0",
     "api-documenter-yaml-to-antora-asciidoc": "^0.0.0-11",
-    "jest": "^26.5.3",
-    "ts-jest": "^26.4.1",
-    "ts-node": "^9.0.0",
-    "tslint": "^5.16.0",
-    "tslint-eslint-rules": "^5.4.0",
-    "typescript": "^4.2.4",
-    "typescript-bundle": "^1.0.14"
+    "jest": "^29.7.0",
+    "ts-jest": "^29.3.4",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
+  },
+  "engines": {
+    "node": ">=16"
   },
   "license": "Apache-2.0"
 }
